lab1/Test/L1-A-11-78.cmm
float UfQ6 ( ) {
  int TkCopUzF72yFf ;
  lIZCj8RJPc = mwuNYECA ( DuQtSUlz4i2OmrzR , || IOHrpiDF 
    && jCBzNobPI5lfmzICLUjL > dkNWUMGpEUAUYCdKUOLo - ZZ4engDrmehLB 
    / SjVr_QTRkk3x7KmmPe [ ftVo6MJYssbMBP && e1n5rWaHP0ZCt9p 
    < Vk24UQk7vMWjPH8e + bMeiCYeM50 * ( xuiny == Evlw1cUv_4HLgNxYm0A 
    + ! p [ BUQzDYe4E35X && NmdjPTw6X5 != G - uzpYQGiXr 
    [ s2D >= uj9Ky623G3w49Vik - ( TUN9pDCLa = CMJaMvZlrN3HwciILgxU 
    <= vt0WFFhGL7qnDY3PAu ) - - kctQhJkVC16F_Esl6ywv - 
    1065909819.1018863740 ] ] / A8CAdyv7bQT ) ] ) * - 
    ! - wreYbl1Q ( ) . fP6bokhTVpwfx9ketJ5Q / 4977675 
    ;
}
int y2K3MPJwN2Pa8REWnuFW ( int CbTWQhC2d8vcx7gk6aU 
  ) {
  if M )   while ( F7pNgQm )   if ( s )   DGb float 
    ;
else {
  }

else   if ( W )   return M6KKOLWiP8 ;


}
int ;
struct {
  int j ;
  struct {
    int gwcs3Ee ;+ 
    struct {
      int Azl5a2SJzDIp5o ;
    }jqCWE54jpOy ;* 
  }Oj6tjN62IPF 
  struct rhqN {
    struct FYR vbOZkBT5La2YX ;
  }Ya2aLmD4 ;
  struct Q vtHU8aBuxtI3 ;
  struct lPtVI4C4_ doms_6johWtCEQImF , xHtppZQ0KRY 
    = E9k9 ;
}zhhXXXvVjXZO5d [ 1840983309 ] 
;
int , Do9HHEHp_zw_H 

;
int ;
int Qi3XwWi058 ( int fACexJkYa , int != pPQtQAnQcTSgIcvSuc9 
  ) {
}
